# overwolf-boilerplate

./: .agignore  .eslintignore  .eslintrc  .flowconfig  .gitattributes  .gitignore  .stylelintrc  .tabnineignore  README.md  babel.config.js  buildspec.yml  compile-config.toml  create-configs-production.js  create-configs-staging.js  create-configs.js.example  ecosystem.config.js  git-cleanup-local  git-cleanup-remote  package-lock.json  package.json  rust-components.bat  style.md  svgo-keep-colour.yml  svgo.yml  webpack.bootstrapper.dev.js  webpack.bootstrapper.prod.js  webpack.dev.js  webpack.prod.js
decls/: __GLOBALS__.flow.js  easy-peasy.flow.js  error-handling.macro.flow.js  faker.js  ramda.flow.js  styled-components.flow.js  svg.macro.flow.js
docker/: Dockerfile
plugins/bootstrapper/: Bootstrapper.cs
plugins/dll-call/: DllCall.cs  generate-crap.js
plugins/file-reader-writer/: FileReaderWriter.cs
plugins/logger/: Cargo.toml  clippy.bat  rustfmt.toml
plugins/logger/src/: lib.rs
plugins/simple-io-plugin/: DebugMonitor.cs  FileListenerWorker.cs  IniFile.cs  OutputDebugStringManager.cs  SimpleIOPlugin.cs
plugins/unbounded-request/: UnboundedRequest.cs
public/extension/: create-icon.bat  empty1.html  index.html  manifest.json
src/client/: index.jsx
src/components/: Advert.jsx  App.jsx  hooks.js  semantic.jsx
src/helpers/: error-handling.macro.js  handle-change.js  index.js  logger.js  svg.macro.js
src/scripts/: clean-svgs.js  (+11 more)
stubs/: Base64Stub.js  WasmStub.js
tools/: Cargo.toml  clippy.bat  compile.rs  config.rs  doc.bat  validate-config.rs
(+13 files in other folders)
