[package]
name = "tools"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"
lazy_static = "1"
structopt = "0.3"
log = "0.4"
simple_logger = "1"
reqwest = { version = "0.10", features = ["async-compression"] }
command-macros = { version = "0.2", features = ["nightly"] }
strum = { version = "0.17", features = ["derive"] }
regex = "1"
futures = "0.3"
base64 = "0.11"
indexmap = "1"
tokio = { version = "0.2", features = ["full"] }
anyhow = "1"

[[bin]]
name = "validate-config"
path = "validate-config.rs"

[[bin]]
name = "compile"
path = "compile.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
